Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
                 </p>
 
                 <ul class="contact-list">
-                    <li><span>Email:</span> your.email@example.com</li>
-                    <li><span>GitHub:</span> github.com/Kishore2005-kish</li>
-                    <li><span>LinkedIn:</span> kishore-p-5695b9315</li>
+                    <li><span>Email:</span> kishkeerthi24@gmail.com</li>
+                    <li><span>GitHub:</span> https://github.com/Kishore2005-kish</li>
+                    <li><span>LinkedIn:</span>https://www.linkedin.com/in/kishore-p-5695b9315/" target="_blank </li>
                 </ul>
             </div>
 
@@ -308,3 +308,4 @@
     </script>
 </body>
 </html>
+
