--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
 
             <div class="hero-photo">
-                <img src="profile.jpg" alt="Kishore P">
+                <img src="profile.jpeg" alt="Kishore P">
             </div>
         </div>
     </section>
@@ -294,3 +294,4 @@
     </script>
 </body>
 </html>
+
