--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 </p>
 
                 <ul class="contact-list">
-                    <li><span>Email:</span> your.email@example.com</li>
+                    <li><span>Email:</span> kishkeerthi24@gmail.com</li>
                     <li><span>GitHub:</span> 
                         <a href="https://github.com/Kishore2005-kish" target="_blank">
                             github.com/Kishore2005-kish
@@ -294,4 +294,5 @@
     </script>
 </body>
 </html>
+
 
