--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <div class="achievements-grid">
                 <div class="achievement-card">
                     <h3>1st Prize – VVCE Hackathon</h3>
-                    <p class="achievement-subtitle">Smart Incentive Recycle Tracker (SmartRecycle)</p>
+                    <p class="achievement-subtitle">Smart recycling incentive Tracker (SmartRecycle)</p>
                     <p>
                         Built and showcased a working prototype of the SmartRecycle platform, demonstrating a
                         complete flow from waste logging to incentive redemption, with a functioning admin panel.
@@ -291,6 +291,7 @@
     </script>
 </body>
 </html>
+
 
 
 
