--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h1>Hi, I'm <span>Kishore P</span></h1>
                 <p class="hero-subtitle">
                     Student at Maharaja Institute of Technology, Thandavapura.  
-                    I build full-stack web projects using <strong>PHP, MySQL, JavaScript, and Next.js</strong>,
+                    I build full-stack web projects using <strong>PHP, MySQL, JavaScript</strong>,
                     focusing on real-world problems like online voting, organ donation, and smart recycling.
                 </p>
                 <div class="hero-actions">
@@ -291,6 +291,7 @@
     </script>
 </body>
 </html>
+
 
 
 
